--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Francois+One&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -108,7 +110,8 @@ nav li a:hover::after {
 
 
 .home {
-    padding: 25vmin 15vmin;
+    padding: 25vmin 0vmin;
+    padding-left: 10vmin;
     background-color: rgb(43, 47, 59);
 }
 
@@ -130,7 +133,7 @@ nav li a:hover::after {
     margin-left: -20px;
 }
 
-.job {
+.job span {
     color: rgb(237, 218, 36);
     font-family: 'Anton', sans-serif;
     font-size: 7vmin;
@@ -139,8 +142,9 @@ nav li a:hover::after {
 .design {
     font-family: 'Darker Grotesque', sans-serif;
     color: white;
-    font-size: 1.1rem;
+    font-size: 3vmin;
     text-transform: uppercase;
+    opacity: 0.5;
 }
 
 .btn-cv {
@@ -170,20 +174,30 @@ nav li a:hover::after {
 /* header second col ends */
 
 .home-2 {
-    padding: 15vmin 0;
+    padding: 20vmin 0;
+    padding-top: 15vmin;
 
 }
 
-.name-2 {
+.name-2 span {
     color: white;
     font-family: 'Anton', sans-serif;
-    font-size: 6vmin;
+    font-size: 5vmin;
+}
+
+.coding {
+    font-family: 'IBM Plex Sans', sans-serif !important;
+    font-size: 2vmin !important;
+    opacity: 0.3;
+
+
 }
 
 .job-2 {
     font-family: 'Andada', serif;
     color: rgb(237, 218, 36);
-    opacity: 0.7;
+    opacity: 0.5;
+    font-size: 3vmin;
 
 }
 
@@ -212,7 +226,7 @@ header img {
 /* Skills */
 .skill {
     padding: 10vmin 10vmin;
-    padding-bottom: 0;
+    padding-bottom: 10vmin;
     background-color: rgb(35, 36, 38);
 }
 
@@ -408,8 +422,8 @@ header img {
     font-family: 'Londrina Solid', cursive;
     color: white;
     font-weight: bold;
-    opacity: 0.9;
-    background: rgb(43, 47, 59);
+
+
 
 
 
@@ -438,6 +452,43 @@ header img {
 
 }
 
+/* Places ends */
+
+
+/* Footer starts */
+
+.contact {
+    padding: 10vmin 10vmin;
+    color: white;
+}
+
+.contact-1 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 3.5vmin;
+    color: rgba(237, 218, 36, 1);
+}
+
+.contact-2 span {
+    font-family: 'Anton', sans-serif;
+    font-size: 6vmin;
+    color: rgb(66, 245, 200);
+}
+
+
+.live-in {
+    font-family: 'Francois One', sans-serif;
+    color: rgba(255, 255, 255, 0.8);
+    padding-top: 3vmin;
+
+}
+
+.live-in span {
+    font-size: 1.2rem;
+    color: yellow
+}
+
+
+
 
 
 
@@ -460,7 +511,7 @@ header img {
     }
 
     .home-2 {
-        padding-top: 20vmin;
+        padding-top: 35vmin;
         padding-bottom: 10vmin;
     }
 
@@ -489,6 +540,8 @@ header img {
     }
 
 
+
+
 }
 
 /*  mobile phone */
@@ -503,10 +556,103 @@ header img {
 
     }
 
+    .name-2 span {
+        font-size: 5vmin;
+    }
+
+
+    .home {
+        padding-bottom: 45vmin;
+    }
+
+
+
+
+
 }
 
+/* for 4k devices */
 @media only screen and (min-width:1600px) {
     .yellow-line::after {
         display: none;
     }
+
+    .home {
+        padding: 25vmin 15vmin;
+    }
+
+
+}
+
+/* long height like ipad */
+@media only screen and (min-width:1000px) and (min-height:1200px) {
+
+    .name-2 span,
+    .name span,
+    .job span {
+        font-size: 4vmin
+    }
+
+    .profile {
+        height: 30vmin;
+        width: 30vmin;
+    }
+}
+
+
+
+
+/* rubber band effect */
+.a {
+    font-size: 5.8vmin;
+    margin-left: -5px;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-iteration-count: 1;
+    display: inline-block;
+
+}
+
+.a:first-child {
+    margin: 0;
+}
+
+.a:hover {
+    color: rgb(66, 245, 200);
+    /* animation: rubberBand 5s infinite; */
+    animation-name: rubberBand;
+}
+
+@keyframes rubberBand {
+    from {
+        transform: scale3d(1, 1, 1);
+    }
+
+    30% {
+        transform: scale3d(1.25, 0.75, 1);
+    }
+
+    40% {
+        transform: scale3d(0.75, 1.25, 1);
+    }
+
+    50% {
+        transform: scale3d(1.15, 0.85, 1);
+    }
+
+    65% {
+        transform: scale3d(.95, 1.05, 1);
+    }
+
+    75% {
+        transform: scale3d(1.05, .95, 1);
+    }
+
+    to {
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+.b {
+    margin: 0
 }
