--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -47,11 +47,26 @@ body {
     background: #555;
 }
 
+:root {
+    --bg-primary: rgb(25, 26, 31);
+    --bg-primary-2: rgb(33, 36, 44);
+    --bg-secondary: rgb(35, 36, 38);
+    --text-primary: white;
+    --text-secondary: #08fdd8;
+}
+
 body {
-    background-color: rgb(25, 26, 31);
+    background-color: var(--bg-primary);
+
+
+
+
+
+    transition: 1s ease-out;
 
 
 }
+
 
 nav {
     position: relative;
@@ -60,7 +75,7 @@ nav {
 .arrow {
     position: fixed;
     bottom: 5%;
-    color: #08fdd8;
+    color: var(--text-secondary);
     right: 3%;
     z-index: 3;
 
@@ -119,9 +134,9 @@ nav li a:hover::after {
 
 
 .home {
-    padding: 20vmin 0vmin;
+    padding: 25vmin 0vmin;
     padding-left: 10vmin;
-    background-color: rgb(33, 36, 44);
+    background-color: var(--bg-primary-2);
 }
 
 .name {
@@ -138,7 +153,7 @@ nav li a:hover::after {
     left: 0;
     height: 100%;
     width: 2px;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     margin-left: -20px;
 }
 
@@ -147,7 +162,7 @@ nav li a:hover::after {
 }
 
 .job span {
-    color: #08fdd8;
+    color: var(--text-secondary);
     font-family: 'Anton', sans-serif;
     font-size: 7vmin;
 
@@ -167,16 +182,16 @@ nav li a:hover::after {
     height: 35px;
     width: 100px;
     font-size: 0.7rem;
-    border: 1px solid #08fdd8;
-    background-color: rgb(33, 36, 44);
-    color: #08fdd8;
+    border: 1px solid var(--text-secondary);
+    background-color: var(--bg-primary-2);
+    color: var(--text-secondary);
     font-family: 'Anton', sans-serif;
     outline: 0;
 }
 
 .btn-cv:hover {
     border: 0;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     color: white;
 
 }
@@ -203,7 +218,7 @@ nav li a:hover::after {
 }
 
 .name-2 span {
-    color: white;
+    color: var(--text-primary);
     font-family: 'Anton', sans-serif;
     font-size: 5vmin;
 }
@@ -217,8 +232,8 @@ nav li a:hover::after {
 
 .job-2 {
     font-family: 'Andada', serif;
-    color: #08fdd8;
-    opacity: 0.5;
+    color: var(--text-secondary);
+    opacity: 1;
     font-size: 3vmin;
 
 }
@@ -235,7 +250,7 @@ header img {
     height: 40vmin;
     margin: auto;
     border-radius: 50%;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -251,9 +266,9 @@ header img {
 .about-me {
 
 
-    background-color: rgb(35, 36, 38) !important;
-    border-top: 1px solid #08fdd8;
-    border-bottom: 1px solid #08fdd8;
+    background-color: var(--bg-secondary) !important;
+    border-top: 1px solid var(--text-secondary);
+    border-bottom: 1px solid var(--text-secondary);
 
 }
 
@@ -279,8 +294,7 @@ header img {
 }
 
 .about-text {
-    color: white;
-
+    color: var(--text-primary);
     font-family: 'Londrina Solid', cursive;
     font-size: 12vmin;
     line-height: 10vmin;
@@ -294,18 +308,18 @@ header img {
     right: -12%;
     width: 8px;
     height: 100%;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
 }
 
 .myself {
     padding: 15vmin 10vmin;
-    color: white;
+    color: var(--text-primary);
 
 }
 
 
 .myself span {
-    color: #08fdd8;
+    color: var(--text-secondary);
     font-family: 'Londrina Solid', cursive;
     font-size: 10vmin;
     padding-bottom: 5vmin;
@@ -331,15 +345,15 @@ header img {
 /* Skills */
 .skill {
     padding: 20vmin 10vmin;
-    background-color: rgb(35, 36, 38);
-    border-bottom: 1px solid #08fdd8;
-    border-top: 1px solid #08fdd8;
+    background-color: var(--bg-secondary);
+    border-bottom: 1px solid var(--text-secondary);
+    border-top: 1px solid var(--text-secondary);
 
 }
 
 .my-skill {
     font-family: 'Londrina Solid', cursive;
-    color: white;
+    color: var(--text-primary);
     position: relative;
     font-size: 8vmin;
 
@@ -351,7 +365,7 @@ header img {
     bottom: -20%;
     right: 47%;
     height: 1.5px;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     width: 6%;
 }
 
@@ -361,19 +375,19 @@ header img {
     bottom: -10%;
     right: 45%;
     height: 1.5px;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     width: 10%;
 }
 
 .lorem {
-    color: white;
+    color: var(--text-primary);
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 3vmin;
 }
 
 .skill-text {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
+    color: var(--text-primary);
     opacity: 0.8;
 }
 
@@ -381,12 +395,12 @@ header img {
     position: absolute;
     bottom: 0;
     right: 0;
-    color: #08fdd8;
+    color: var(--text-secondary);
     font-family: 'Anton', sans-serif;
 }
 
 .bar-1 {
-    background-color: gray;
+    background-color: rgb(65, 64, 64);
     width: 90%;
     height: 5px;
     display: block;
@@ -401,7 +415,7 @@ header img {
     bottom: 0;
     left: 0;
     height: 5px;
-    background: #08fdd8;
+    background: var(--text-secondary);
     border-radius: 2px;
     animation: html 15s ease-out;
 
@@ -424,7 +438,7 @@ header img {
 
 
 .bar-2 {
-    background-color: gray;
+    background-color: rgb(65, 64, 64);
     width: 90%;
     height: 5px;
     display: block;
@@ -439,7 +453,7 @@ header img {
     bottom: 0;
     left: 0;
     height: 5px;
-    background: #08fdd8;
+    background: var(--text-secondary);
     border-radius: 2px;
     animation: css 15s ease-out;
 
@@ -458,7 +472,7 @@ header img {
 
 
 .bar-3 {
-    background-color: gray;
+    background-color: rgb(65, 64, 64);
     width: 90%;
     height: 5px;
     display: block;
@@ -473,7 +487,7 @@ header img {
     bottom: 0;
     left: 0;
     height: 5px;
-    background: #08fdd8;
+    background: var(--text-secondary);
     border-radius: 2px;
     animation: js 15s ease-out;
 
@@ -491,7 +505,7 @@ header img {
 
 
 .bar-4 {
-    background-color: gray;
+    background-color: rgb(65, 64, 64);
     width: 90%;
     height: 5px;
     display: block;
@@ -506,7 +520,7 @@ header img {
     bottom: 0;
     left: 0;
     height: 5px;
-    background: #08fdd8;
+    background: var(--text-secondary);
     border-radius: 2px;
     animation: jq 15s ease-out;
 
@@ -527,10 +541,10 @@ header img {
 /* Services starts */
 .services {
     padding: 30vmin 10vmin;
-    background-color: rgb(35, 36, 38);
-    color: #08fdd891;
-    border-bottom: 1px solid #08fdd8;
-    border-top: 1px solid #08fdd8;
+    background-color: var(--bg-secondary);
+    color: var(--text-secondary);
+    border-bottom: 1px solid var(--text-secondary);
+    border-top: 1px solid var(--text-secondary);
 }
 
 .services-header {
@@ -539,7 +553,7 @@ header img {
 
 .services-text {
     font-family: 'Londrina Solid', cursive;
-    color: white;
+    color: var(--text-primary);
     position: relative;
     font-size: 8vmin;
     text-align: center;
@@ -552,7 +566,7 @@ header img {
     bottom: -20%;
     right: 47%;
     height: 1.5px;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     width: 6%;
 }
 
@@ -562,13 +576,13 @@ header img {
     bottom: -10%;
     right: 45%;
     height: 1.5px;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     width: 10%;
 }
 
 .card-service {
     width: 100%;
-    background-color: rgba(28, 29, 31, 0.733);
+    background-color: rgba(27, 27, 29, 0.856);
 }
 
 .card-service:hover {
@@ -627,8 +641,7 @@ header img {
 
 /* Footer starts */
 .contact-me {
-    background: rgb(29, 32, 40);
-    background: linear-gradient(180deg, rgba(29, 32, 40, 1) 21%, rgba(21, 23, 29, 1) 87%);
+    background-color: var(--bg-secondary);
 }
 
 .places h1 {
@@ -692,7 +705,7 @@ header img {
 
 .live-in {
     font-family: 'Francois One', sans-serif;
-    color: rgba(255, 255, 255, 0.8);
+    color: var(--text-primary);
     padding-top: 3vmin;
     font-size: 1.2rem;
 
@@ -700,13 +713,13 @@ header img {
 
 .live-in span {
     font-size: 1.5rem;
-    color: #08fdd8;
+    color: var(--text-secondary);
     opacity: 0.8;
 }
 
 footer a:hover {
     text-decoration: none;
-    color: white;
+    color: var(--text-secondary);
 }
 
 
@@ -901,7 +914,7 @@ footer a:hover {
 }
 
 .a:hover {
-    color: rgb(252, 93, 212);
+    color: rgb(139, 14, 108);
     /* animation: rubberBand 5s infinite; */
     animation-name: rubberBand;
 }
@@ -938,4 +951,69 @@ footer a:hover {
 
 .b {
     margin: 0
+}
+
+
+
+/* ngiht mode  */
+.label {
+    margin-top: 5px;
+    margin-left: 50px;
+    background-color: #111;
+    display: flex;
+    height: 26px;
+    width: 50px;
+    border-radius: 50px;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 5px;
+    position: relative;
+    transform: scale(0.8);
+    transition: 1s ease-in-out;
+}
+
+.ball {
+    position: absolute;
+    height: 21px;
+    width: 21px;
+    border-radius: 50%;
+    background-color: white;
+    top: 3px;
+    left: 3px;
+    transition: 0.2s ease-out;
+}
+
+.fa-sun {
+    color: #f1c40f;
+}
+
+.fa-moon {
+    color: #f39c12;
+}
+
+.checkbox {
+    display: none;
+    opacity: 0;
+    position: absolute;
+
+}
+
+.checkbox:checked+.label .ball {
+    transform: translateX(24px);
+    background-color: black;
+}
+
+.checkbox:checked+.label {
+    background-color: white;
+}
+
+/* class for night mode */
+
+.night-mode {
+    --bg-primary: white;
+    --bg-primary-2: rgb(29, 29, 31);
+    --bg-secondary: white;
+    --text-primary: rgba(34, 34, 33, 0.952);
+    --text-secondary: rgb(72, 128, 176)
 }
