--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -972,6 +972,7 @@ footer a:hover {
     position: relative;
     transform: scale(0.8);
     transition: 1s ease-in-out;
+    cursor: pointer;
 }
 
 .ball {
