--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -97,7 +97,7 @@ nav li a {
 }
 
 nav li a:hover {
-    color: #08fdd8;
+    color: var(--text-secondary);
 
 
 }
@@ -106,7 +106,7 @@ nav li a::after {
     content: '';
     width: 100%;
     height: 2px;
-    background-color: #08fdd8;
+    background-color: var(--text-secondary);
     position: absolute;
     bottom: 0;
     left: 0;
