--- a/tictactoe/styles.css
+++ b/tictactoe/styles.css
@@ -183,7 +183,7 @@ body {
     outline: 0;
     width: 40vmin;
     height: 25vmin;
-    margin: 5rem;
+    margin: 5vmin;
     font-size: 18vmin;
     box-shadow: 0.3rem 0.5rem rgba(0, 0, 0, 0.3)
 }
